scripts/deployment/kubernetes/celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-monitor
  labels:
    app: celery-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-monitor
  template:
    metadata:
      labels:
        app: celery-monitor
    spec:
      containers:
        - name: flower
          ports:
            - containerPort: 5555
          image: newstorycontainerregistry.azurecr.io/worker:latest
          imagePullPolicy: Always
          command: [ "./entrypoint.sh" ]
---
apiVersion: v1
kind: Service
metadata:
  name: celery-flower
spec:
  type: ClusterIP
  ports:
    - port: 5555
      targetPort: 5555
  selector:
    app: celery-monitor
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  labels:
    app: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
        - name: worker
          image: newstorycontainerregistry.azurecr.io/worker:latest
          imagePullPolicy: Always
