scripts/deployment/kubernetes/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: newstorycontainerregistry.azurecr.io/web:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: keycloak-config
              mountPath: "/etc"
              readOnly: true
      volumes:
        - name: keycloak-config
          secret:
            secretName: keycloak-config
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: web
